fix: project page styles, toggle collapse added

--- a/src/AllProjectsSections/Project.module.css
+++ b/src/AllProjectsSections/Project.module.css
@@ -10,7 +10,6 @@
     border-radius: 10px;
 
     padding: 2%;
-    padding-bottom: 5%;
 
     display: flex;
     flex-direction: column;
@@ -23,6 +22,17 @@
     padding: 0%;
     margin: 0%;
     margin-left: 1%;
+}
+
+.toggleCollapseBtn {
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    border: 0px;
+
+    padding: 1% 2%;
+
+    width: 120px;
 }
 
 .hLine {
@@ -57,6 +67,14 @@
     padding: 2%;
 }
 
+.projectText>p {
+    text-indent: 1em;
+    text-align: justify;
+
+    padding: 1% 2%;
+    margin: 0%;
+}
+
 .projectBtnLink {
     background-color: rgba(255, 255, 255, 0.25);
     backdrop-filter: blur(15px);
@@ -64,6 +82,21 @@
     border: 0px;
 
     padding: 1% 2%;
+}
+
+.bottomBtnsDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    width: 100%;
+}
+
+.bottomBtns {
+    background-color: rgba(255, 255, 255, 0);
+    border: 0px;
+
 }
 
 .projectBtn {
